{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 54,
  "lineage": "5cf694a2-8f7e-1982-a6b5-135292c39442",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:internet-gateway/igw-0f9b044324af182c5",
            "id": "igw-0f9b044324af182c5",
            "owner_id": "083537024163",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-04a2b873496e8e379"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:route-table/rtb-0ec6416f00f5e5cd2",
            "id": "rtb-0ec6416f00f5e5cd2",
            "owner_id": "083537024163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9b044324af182c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a2b873496e8e379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb5be9cf67de3fbe",
            "route_table_id": "rtb-0ec6416f00f5e5cd2",
            "subnet_id": "subnet-020756620761cc2a4"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.new-subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee1d383bbaae294d",
            "route_table_id": "rtb-0ec6416f00f5e5cd2",
            "subnet_id": "subnet-0ef3aaa51806290b9"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.new-subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:security-group/sg-083826f35498d5b43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083826f35498d5b43",
            "ingress": [],
            "name": "terraform-20220819042417325900000001",
            "name_prefix": "terraform-",
            "owner_id": "083537024163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a2b873496e8e379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:subnet/subnet-020756620761cc2a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020756620761cc2a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083537024163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-04a2b873496e8e379"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:subnet/subnet-0ef3aaa51806290b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef3aaa51806290b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083537024163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-04a2b873496e8e379"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083537024163:vpc/vpc-04a2b873496e8e379",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e301f35d418b2872",
            "default_route_table_id": "rtb-07967efa12767f7a0",
            "default_security_group_id": "sg-0057e5d5c9b9e3f79",
            "dhcp_options_id": "dopt-0c67878a731a0ad38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04a2b873496e8e379",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07967efa12767f7a0",
            "owner_id": "083537024163",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}